# cte

./: .env.example  .gitignore  Cargo.toml  Dockerfile  MAKE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  live_demo.yml  release.yml
android/: AndroidCollector.kt  termux_collector.py
crates/core/: Cargo.toml
crates/core/src/: geo.rs  lib.rs  lm.rs  metrics.rs  montecarlo.rs  signal.rs  spatial.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  main.rs  normalizer.rs  opencellid.rs  state.rs
crates/server/src/routes/: android.rs  cells.rs  mod.rs  upload.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
migrations/: 001_init.sql  002_measurements.sql
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/wasm/: .gitkeep
web/src/: App.svelte
web/src/lib/: MapView.svelte  MetricsPanel.svelte  SourcesPanel.svelte
