[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/wasm",
    "crates/server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Trieval Team"]
license = "MIT"
repository = "https://github.com/your-org/trieval"

[workspace.dependencies]
nalgebra = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
