[package]
name = "trieval-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for trieval-core"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trieval_wasm"

[dependencies]
trieval-core = { path = "../core", features = ["std"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = { workspace = true }

# WASM-only extras — only compiled when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
